Change \em to \emph
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@69664 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -124,19 +124,19 @@ Printing history:
 
 \item[December 2009:] Begin to 
 produce 
-{\em Python for Informatics: Exploring Information}
+\emph{Python for Informatics: Exploring Information}
 by re-mixing
-{\em Think Python: How to Think Like
+\emph{Think Python: How to Think Like
 a Computer Scientist}
 
 \item[June 2008:] Major revision, changed title to
-{\em Think Python: How to Think Like
+\emph{Think Python: How to Think Like
 a Computer Scientist}.
 
 \item[August 2007:] Major revision, changed title to
-{\em How to Think Like a (Python) Programmer}.
+\emph{How to Think Like a (Python) Programmer}.
 
-\item[April 2002:] First edition of {\em How to Think Like
+\item[April 2002:] First edition of \emph{How to Think Like
 a Computer Scientist}.
 
 \end{description}
@@ -160,13 +160,13 @@ representation of a textbook, which can be converted to other formats
 and printed.
 
 The \LaTeX\ source for the 
-{\em Think Python: How to Think Like
+\emph{Think Python: How to Think Like
 a Computer Scientist}
 version of this book is available from
 \url{http://www.thinkpython.com}.
 
 The \LaTeX\ source for the 
-{\em Python for Informatics: Exploring Information}
+\emph{Python for Informatics: Exploring Information}
 version of the book is available (for the moment) from 
 \url{http://source.sakaiproject.org/contrib//csev/trunk/pyinf/}.
 
@@ -206,7 +206,7 @@ It is quite natural for academics who are continuously told to
 that is their own fresh creation.   This book is an 
 experiment in not starting from scratch, but instead ``re-mixing''
 the book titled
-{\em Think Python: How to Think Like
+\emph{Think Python: How to Think Like
 a Computer Scientist}
 written by Allen B. Downey, Jeff Elkner and others.
 
@@ -227,7 +227,7 @@ book for my course so I set out
 to write just such a book.  Luckily at a faculty meeting three weeks
 before I was about to start my new book from scratch over 
 the holiday break, 
-Dr. Atul Prakash showed me the {\em Think Python} book which he had
+Dr. Atul Prakash showed me the \emph{Think Python} book which he had
 used to teach his Python course that semester.  
 It is a well-written Computer Science text with a focus on 
 short, direct explanations and ease of learning.  
@@ -236,7 +236,7 @@ short, direct explanations and ease of learning.
 \index{CC-BY-SA}
 \index{BY-SA}
 
-As the copyright holder of {\em Think Python},
+As the copyright holder of \emph{Think Python},
 Allen has given me permission to change the book's license 
 from the
 GNU Free Documentation License 
@@ -254,7 +254,7 @@ has been changed to get to doing data analysis problems as quickly as
 possible and have a series of running examples and exercises 
 about data analysis from the very beginning.  
 
-The first 10 chapters are similar to the {\em Think Python} book
+The first 10 chapters are similar to the \emph{Think Python} book
 but there have been some changes.  Nearly all number-oriented
 exercises have been replaced with data-oriented exerises.
 Topics are presented in the order to needed to build increasingly
@@ -273,7 +273,7 @@ using web services, parsing XML data, and creating
 and using databases using Structured Query Language.
 
 Chapters 15-19 are included with very little change from 
-{\em Think Python}.   I do not cover these chapters in my 
+\emph{Think Python}.   I do not cover these chapters in my 
 one-semester technology literacy course.  I include them 
 primarily because students may use them as reference to 
 get a deeper understanding of functions, methods, and objects.
@@ -290,14 +290,14 @@ class that can be applied even if one chooses not to
 become a professional programmer.
 
 Students who find this book interesting and want to further explore
-should look at Allen B. Downey's {\em Think Python} book.  Because there
+should look at Allen B. Downey's \emph{Think Python} book.  Because there
 is a lot of overlap between the two books,
 students will quickly pick up skills in the additional
 areas of computing in general and computational thinking 
-that are covered in {\em Think Python}.
+that are covered in \emph{Think Python}.
 And given that the books have a similar writing style and at times
 have identical text and examples, you should be 
-able to move quickly through {\em Think Python} with a minimum of effort.
+able to move quickly through \emph{Think Python} with a minimum of effort.
 
 I feel that this book serves an example of why open 
 materials are so important to the future of education,
@@ -305,7 +305,7 @@ and want to thank Allen B. Downey and Cambridge University
 Press for their forward looking decision to make the book available
 under an open Copyright.   I hope they are pleased with the 
 results of my efforts and I hope that you the reader are pleased with
-{\em our} collective efforts.
+\emph{our} collective efforts.
 
 Charles Severance\\
 www.dr-chuck.com\\
@@ -355,7 +355,7 @@ the minimum useful subset of Java and left out the rest.
 
 \end{itemize}
 
-I needed a title, so on a whim I chose {\em How to Think Like
+I needed a title, so on a whim I chose \emph{How to Think Like
 a Computer Scientist}.
 
 My first version was rough, but it worked.  Students did the reading,
@@ -375,7 +375,7 @@ Python.  He sent me a copy of his translation, and I had the
 unusual experience of learning Python by reading my own book.
 
 Jeff and I revised the book, incorporated a case study by
-Chris Meyers, and in 2001 we released {\em How to Think Like
+Chris Meyers, and in 2001 we released \emph{How to Think Like
 a Computer Scientist: Learning with Python}, also under
 the GNU Free Documentation License.
 As Green Tea Press, I published the book and started selling
@@ -409,7 +409,7 @@ started and introduced me to what has turned out to be my
 favorite language.
 
 I also thank Chris Meyers, who contributed several sections
-to {\em How to Think Like a Computer Scientist}.
+to \emph{How to Think Like a Computer Scientist}.
 
 And I thank the Free Software Foundation for developing
 the GNU Free Documentation License, which helped make
@@ -419,7 +419,7 @@ my collaboration with Jeff and Chris possible.
 \index{Free Documentation License, GNU}
 
 I also thank the editors at Lulu who worked on
-{\em How to Think Like a Computer Scientist}.
+\emph{How to Think Like a Computer Scientist}.
 
 I thank all the students who worked with earlier
 versions of this book and all the contributors (listed
@@ -456,7 +456,7 @@ and rewarding activity.  You can write programs for
 many reasons ranging from making your living to solving
 a difficult data analysis problem to having fun to helping
 someone else solve a problem.  This book assumes that 
-{\em everyone} needs to know how to program and that once 
+\emph{everyone} needs to know how to program and that once 
 you know how to program, you will figure out what you want 
 to do with your newfound skills.  
 
@@ -927,7 +927,7 @@ modification, and you take a step closer to a working program.  If
 your hypothesis was wrong, you have to come up with a new one.  As
 Sherlock Holmes pointed out, ``When you have eliminated the
 impossible, whatever remains, however improbable, must be the truth.''
-(A. Conan Doyle, {\em The Sign of Four})
+(A. Conan Doyle, \emph{The Sign of Four})
 
 \index{Holmes, Sherlock}
 \index{Doyle, Arthur Conan}
@@ -935,7 +935,7 @@ impossible, whatever remains, however improbable, must be the truth.''
 For some people, programming and debugging are the same thing.  That
 is, programming is the process of gradually debugging a program until
 it does what you want.  The idea is that you should start with a
-program that does {\em something} and make small modifications,
+program that does \emph{something} and make small modifications,
 debugging them as you go, so that you always have a working program.
 
 For example, Linux is an operating system that contains thousands of
@@ -943,7 +943,7 @@ lines of code, but it started out as a simple program Linus Torvalds
 used to explore the Intel 80386 chip.  According to Larry Greenfield,
 ``One of Linus's earlier projects was a program that would switch
 between printing AAAA and BBBB.  This later evolved to Linux.''
-({\em The Linux Users' Guide} Beta Version 1).
+(\emph{The Linux Users' Guide} Beta Version 1).
 
 \index{Linux}
 
@@ -1934,7 +1934,7 @@ has no effect on the program.
 
 Comments are most useful when they document non-obvious features of
 the code.  It is reasonable to assume that the reader can figure out
-{\em what} the code does; it is much more useful to explain {\em why}.
+\emph{what} the code does; it is much more useful to explain \emph{why}.
 
 This comment is redundant with the code and useless:
 
@@ -1986,7 +1986,7 @@ print x1q3p9afd
 \end{verbatim}
 \afterverb
 %
-The Python interpreter sees all three of these programs as {\em exactly the 
+The Python interpreter sees all three of these programs as \emph{exactly the 
 same} but humans see and understand these programs quite differently.  
 Humans will most quickly understand the {\bf intent} 
 of the second program because the 
@@ -1994,7 +1994,7 @@ programmer has chosen variable names that reflect the intent of the programmer
 regarding what data will be stored in each variable.
 
 We call these wisely-chosen variable names ``mnemonic variable names''.  The
-word {\em mnemonic}\footnote{See 
+word \emph{mnemonic}\footnote{See 
 \url{http://en.wikipedia.org/wiki/Mnemonic}
 for an extended description of the word ``mnemonic''.} 
 means ``memory aid''.
@@ -2022,7 +2022,7 @@ What is happening here?  Which of the tokens (for, word, in, etc.) are reserved 
 and which are just variable names?  Does Python understand at a fundamental level 
 the notion of words?  Beginning programmers have 
 trouble separating what parts of the
-code {\em must} be the same as this example and what parts of the code are simply
+code \emph{must} be the same as this example and what parts of the code are simply
 choices made by the programmer.
 
 The following code is equivalent to the above code:
@@ -2349,7 +2349,7 @@ similar to their meaning in English.  For example,
 {\tt x > 0 and x < 10} 
 
 is true only if {\tt x} is greater than 0
-{\em and} less than 10.
+\emph{and} less than 10.
 
 \index{and operator}
 \index{or operator}
@@ -2358,8 +2358,8 @@ is true only if {\tt x} is greater than 0
 \index{operator!or}
 \index{operator!not}
 
-{\tt n\%2 == 0 or n\%3 == 0} is true if {\em either} of the conditions
-is true, that is, if the number is divisible by 2 {\em or} 3.
+{\tt n\%2 == 0 or n\%3 == 0} is true if \emph{either} of the conditions
+is true, that is, if the number is divisible by 2 \emph{or} 3.
 
 Finally, the {\tt not} operator negates a boolean
 expression, so {\tt not (x > y)} is true if {\tt x > y} is false,
@@ -2748,7 +2748,7 @@ ZeroDivisionError: integer division or modulo by zero
 %
 The third calculation failed because Python was evaluating {\tt (x/y)}
 and {\tt y} was zero which causes a runtime error.  But the second example
-did {\em not} fail because the first part of the expression {\tt x >= 2} 
+did \emph{not} fail because the first part of the expression {\tt x >= 2} 
 evaluated to {\tt False} so the {\tt (x/y)} was not ever executed 
 due to the {\bf short circuit} rule and there was no error.
 
@@ -2777,7 +2777,7 @@ In the first logical expression, {\tt x >= 2} is {\tt False} so the evaluation
 stops at the {\tt and}.  In the second logical expression {\tt x >= 2} is {\tt True}
 but {\tt y != 0} is {\tt False} so we never reach {\tt (x/y)}.
 
-In the third logical expression, the {\tt y != 0} is {\em after} the 
+In the third logical expression, the {\tt y != 0} is \emph{after} the 
 {\tt (x/y) } calculation so the expression fails with an error.
 
 In the second expression, we say that {\tt y != 0} acts as a {\bf guard}
@@ -3403,7 +3403,7 @@ a single quote (which is also an apostrophe) appears in the string.
 \index{ellipses}
 
 If you type a function definition in interactive mode, the interpreter
-prints ellipses ({\em ...}) to let you know that the definition
+prints ellipses (\emph{...}) to let you know that the definition
 isn't complete:
 
 \beforeverb
@@ -3529,7 +3529,7 @@ called the {\bf flow of execution}.
 Execution always begins at the first statement of the program.
 Statements are executed one at a time, in order from top to bottom.
 
-Function {\em definitions} do not alter the flow of execution of the
+Function \emph{definitions} do not alter the flow of execution of the
 program, but remember that statements inside the function are not
 executed until the function is called.
 
@@ -4149,9 +4149,9 @@ converges to one.
 
 \index{Collatz conjecture}
 The hard question is whether we can prove that this program terminates
-for {\em all positive values} of {\tt n}.  So far\footnote{See
+for \emph{all positive values} of {\tt n}.  So far\footnote{See
   \url{wikipedia.org/wiki/Collatz_conjecture}.}, no one has
-been able to prove it {\em or} disprove it!
+been able to prove it \emph{or} disprove it!
 
 \section{``Infinite loops'' and {\tt break}}
 \index{break statement}
@@ -4282,8 +4282,8 @@ skipping the {\tt print} statement.
 Sometimes we want to loop through a {\bf set} of things such 
 as a list of words, the lines in a file or a list of numbers.
 When we have a list of things to loop through, we can
-construct a {\em definite} loop using a {\tt for} statement.
-We call the {\tt while} statement an {\em indefinite} loop
+construct a \emph{definite} loop using a {\tt for} statement.
+We call the {\tt while} statement an \emph{indefinite} loop
 because it simply loops until some condition becomes {\tt False} 
 whereas the {\tt for} loop is looping through a known
 set of items so it runs through as many iterations as there
@@ -4304,7 +4304,7 @@ print 'Done!'
 Translating this {\tt for} loop to English is not as direct as the 
 {\tt while}, but if you think of friends as a {\bf set},
 it goes like this: ``Run the statements in the body of the 
-for loop once for each friend {\em in} the set named friends.''.
+for loop once for each friend \emph{in} the set named friends.''.
 
 In Python terms, 
 the variable {\tt friends} is a list\footnote{We will 
@@ -4399,7 +4399,7 @@ print 'Total: ', total
 \end{verbatim}
 \afterverb
 %
-In this loop we {\em do} use the {\bf iteration variable}.
+In this loop we \emph{do} use the {\bf iteration variable}.
 Instead of simply adding one to the {\tt count} as in the previous loop, 
 we add the actual number (3, 41, 12, etc.) to the running 
 total during each loop iteration.
@@ -4807,7 +4807,7 @@ left.
 
 The following example shows how to use concatenation (string addition)
 and a {\tt for} loop to generate an abecedarian series (that is, in
-alphabetical order).  In Robert McCloskey's book {\em Make
+alphabetical order).  In Robert McCloskey's book \emph{Make
 Way for Ducklings}, the names of the ducklings are Jack, Kack, Lack,
 Mack, Nack, Ouack, Pack, and Quack.  This loop outputs these names in
 order:
@@ -4866,7 +4866,7 @@ Python
 The operator {\tt [n:m]} returns the part of the string from the 
 ``n-eth'' character to the ``m-eth'' character, including the first but
 excluding the last.  This behavior is counterintuitive, but it might
-help to imagine the indices pointing {\em between} the
+help to imagine the indices pointing \emph{between} the
 characters, as in the following diagram:
 
 \beforefig
@@ -5307,7 +5307,7 @@ And we wanted to pull out only the second half of the address (i.e.
 method and string slicing.   
 
 First, we will find the position of the at-sign in the string.  Then we will
-find the position of the first space {\em after} the at-sign.  And then we
+find the position of the first space \emph{after} the at-sign.  And then we
 will use string slicing to extract the portion of the string which we 
 are looking for.
 
@@ -5330,7 +5330,7 @@ uct.ac.za
 We use a version of the {\tt find} method which allows us to specify
 a position in the string where we want {\tt find} to start looking.
 When we slice, we extract the characters 
-from ``one beyond the at-sign through up to {\em but not including} the 
+from ``one beyond the at-sign through up to \emph{but not including} the 
 space character''.  
 
 The documentation for the {\tt find} method is available at
@@ -5745,7 +5745,7 @@ then {\tt end} is optional.
 \end{ex}
 
 \begin{ex}
-The following functions are all {\em intended} to check whether a
+The following functions are all \emph{intended} to check whether a
 string contains any lowercase letters, but at least some of them are
 wrong.  For each function, describe what the function actually does
 (assuming that the parameter is a string).
@@ -5966,10 +5966,10 @@ Y
 \afterverb
 %
 
-You can also see that the length of the string \verb"'X\nY'" is {\em three}
+You can also see that the length of the string \verb"'X\nY'" is \emph{three}
 characters because the newline character is a single character.
 
-So when we look at the lines in a file, we need to {\em imagine}
+So when we look at the lines in a file, we need to \emph{imagine}
 that there is a special invisible character at the end of each line
 that marks the end of the line called the newline.  
 
@@ -6108,7 +6108,7 @@ which start with ``From:'', but why are we seeing the extra blank
 lines?  This is due to that invisible {\bf newline} character.
 Each of the lines ends with a newline, so the {\tt print} 
 statement prints the string in the variable {\bf line} which includes
-a newline and then {\tt print} adds {\em another} newline, resulting
+a newline and then {\tt print} adds \emph{another} newline, resulting
 in the double spacing effect we see.
 
 We could use line slicing to print all but the last character, but 
@@ -6493,7 +6493,7 @@ is released.
 \index{QA}
 
 \item[Pythonic:] A technique that works elegantly in Python.
-``Using try and except is the {\em Pythonic} way to recover from 
+``Using try and except is the \emph{Pythonic} way to recover from 
 missing files.''.
 \index{Pythonic}
 
@@ -7181,7 +7181,7 @@ Usually when we are reading a file
 we want to do something to the lines other than just 
 printing the whole line.  Often we want to find the ``interesting
 lines'' and then {\bf parse} the line to find some interesting
-{\em part} of the line.  What if we wanted to print out the day of the 
+\emph{part} of the line.  What if we wanted to print out the day of the 
 week from those lines that start with ``From ''.
 
 {\tt
@@ -7243,7 +7243,7 @@ b = 'banana'
 %
 We know that {\tt a} and {\tt b} both refer to a
 string, but we don't
-know whether they refer to the {\em same} string.
+know whether they refer to the \emph{same} string.
 There are two possible states:
 
 \index{aliasing}
@@ -7456,7 +7456,7 @@ False
 
 This difference is important when you write functions that
 are supposed to modify lists.  For example, this function
-{\em does not} delete the head of a list:
+\emph{does not} delete the head of a list:
 
 \beforeverb
 \begin{verbatim}
@@ -8001,7 +8001,7 @@ number of key-value pairs:
 \afterverb
 %
 The {\tt in} operator works on dictionaries; it tells you whether
-something appears as a {\em key} in the dictionary (appearing
+something appears as a \emph{key} in the dictionary (appearing
 as a value is not good enough).
 
 \index{membership!dictionary}
@@ -8173,7 +8173,7 @@ should be able to eliminate the {\tt if} statement.
 One of the common uses of a dictionary is to count the occurrence
 of words in a file with some written text.  
 Lets start with a very simple file of
-words taken from the text of {\em Romeo and Juliet}
+words taken from the text of \emph{Romeo and Juliet}
 thanks to 
 \url{http://shakespeare.mit.edu/Tragedy/romeoandjuliet/romeo_juliet.2.2.html}.
 
@@ -8200,7 +8200,7 @@ You will see that we have two {\tt for} loops.  The outer loop is reading the
 lines of the file and the inner loop is iterating through each
 of the words on that particular line.  This is an example
 of a pattern called {\bf nested loops} because one of the loops
-is the {\em outer} loop and the other loop is the {\em inner}
+is the \emph{outer} loop and the other loop is the \emph{inner}
 loop.  
 
 Because the inner loop executes all of its iterations each time
@@ -8344,7 +8344,7 @@ Who is already sick and pale with grief,
 %
 Since the Python {\tt split} function looks for spaces and
 treats words as tokens separated by spaces, we would treat the
-words ``soft!'' and ``soft'' as {\em different} words and create
+words ``soft!'' and ``soft'' as \emph{different} words and create
 a separate dictionary entry for each word.
 
 Also since the file has capitalization, we would treat
@@ -8866,7 +8866,7 @@ to the variables {\tt x} and {\tt y} in a single statement.
 \end{verbatim}
 \afterverb
 %
-It is not magic, Python {\em roughly} translates the 
+It is not magic, Python \emph{roughly} translates the 
 tuple assignment syntax
 to be the following:\footnote{Python does not translate the 
 syntax literally.  For example if you try this with a dictionary
@@ -9038,7 +9038,7 @@ The output of this loop is:
 Again in hash key order (i.e. no particular order).
 
 If we combine these two techniques, we can print out the contents
-of a dictionary sorted by the {\em value} stored in each key/value
+of a dictionary sorted by the \emph{value} stored in each key/value
 pair.
 
 To do this, we first make a list of tuples where each tuple is 
@@ -9069,7 +9069,7 @@ contents sorted by value.
 
 \section{The most common words}
 
-Coming back to our running example of the text from {\em Romeo and Juliet} 
+Coming back to our running example of the text from \emph{Romeo and Juliet} 
 Act 2, Scene 2, we can augment our program to use this technique to 
 print the ten most common words in the text as follows:
 
@@ -10668,7 +10668,7 @@ than HTML.  Here is a sample of an XML document:
 %
 Often it is helpful to think of an XML document as a tree structure
 where there is a top tag {\tt person} and other tags such as {\tt phone}
-are drawn as {\em children} of their parent nodes.
+are drawn as \emph{children} of their parent nodes.
 
 \beforefig
 \centerline{\includegraphics[height=1.50in]{figs2/xml-tree.eps}}
@@ -12259,7 +12259,7 @@ The result of the JOIN is to create extra-long ``meta-rows'' which have both
 the fields from {\tt People} and the matching fields from {\tt Follows}.
 Where there is more than one match between the {\tt id} field from {\tt People}
 and the \verb"from_id" from {\tt People}, then JOIN creates a meta-row 
-for {\em each} of the matching pairs of rows, duplicating data as needed.
+for \emph{each} of the matching pairs of rows, duplicating data as needed.
 
 The following code demonstrates the data that we will have in the 
 database after the multi-table Twitter spider program (above) has
@@ -12726,7 +12726,7 @@ and a traceback.
 
 The traceback identifies the function that is currently running,
 and then the function that invoked it, and then the function that
-invoked {\em that}, and so on.  In other words, it traces the
+invoked \emph{that}, and so on.  In other words, it traces the
 sequence of function invocations that got you to where you are.  It
 also includes the line number in your file where each of these
 calls occurs.
@@ -12831,7 +12831,7 @@ the output so it is easier to understand.
 
 To simplify the program, there are several things you can do.  First,
 scale down the problem the program is working on.  For example, if you
-are searching a list, search a {\em small} list.  If the program takes
+are searching a list, search a \emph{small} list.  If the program takes
 input from the user, give it the simplest input that causes the
 problem.
 
