Playing with the HTML options using hevea
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@69669 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -188,8 +188,7 @@ with permission.
 {\Large \thetitle}
 
 {\large 
-Charles Severance\\
-Allen B. Downey}
+Charles Severance}
 
 Version \theversion
 
