New figure image from Eric Hofer and Eytan Adar's GUESS software.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@69769 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -52,7 +52,9 @@
 %-half title--------------------------------------------------
 \thispagestyle{empty}
 
-\centerline{\includegraphics[height=7.00in]{cover/cover.eps}}
+\centerline{\includegraphics[height=4.00in]{cover/network-um-nsf-9-99-10-09.eps}}
+
+%  cover/network-um-nsf-9-99-10-09.eps cover/network-um-nsf-9-99-10-09-nodes.eps
 
 % \begin{flushright}
 % \vspace*{2.0in}
@@ -170,8 +172,10 @@ The \LaTeX\ source for the
 version of the book is available (for the moment) from 
 \url{http://source.sakaiproject.org/contrib/csev/trunk/pyinf/}.
 
-The cover images were provided by Dr. Lada Adamic and are used
-with permission.
+The cover images show social connectivity of NSF grant investigators 
+from September 1999 through October 2010 and was provided
+by Eric Hofer using the GUESS software developed by Eytan Adar,
+both of the University of Michigan.
 \vspace{0.2in}
 
 } % end small
@@ -13105,6 +13109,8 @@ Noah Botimer,
 Emily Alinder,
 Mark Thompson-Kular,
 James Perry,
+Eric Hofer,
+Eytan Adar,
 
 % CONTRIB
 
