Tiny tweaks - should be the final, published book for Fall 2010.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@69835 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -11,8 +11,7 @@
 
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
-\usepackage[width=5.0in,height=7.75in,
-  hmarginratio=3:2,vmarginratio=1:1]{geometry}
+\usepackage[width=5.0in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
 
 \usepackage{pslatex}
 \usepackage{url}
@@ -104,7 +103,7 @@ Charles Severance\\
 }
 
 
-\vspace{2.5in}
+\vspace{2.25in}
 
 \centerline{\includegraphics[width=1in]{figs2/by-sa.eps}}
 \vfill
@@ -169,13 +168,16 @@ version of this book is available from
 
 The \LaTeX\ source for the 
 \emph{Python for Informatics: Exploring Information}
-version of the book is available (for the moment) from 
+version of the book is available from 
 \url{http://source.sakaiproject.org/contrib/csev/trunk/pyinf/}.
 
-The cover images show social connectivity of NSF grant investigators 
+The cover image shows social connectivity of NSF grant investigators 
+at the University of Michigan
 from September 1999 through October 2010 and was provided
-by Eric Hofer using the GUESS software developed by Eytan Adar,
-both of the University of Michigan.
+by Eric Hofer and visualized using 
+the GUESS software developed by Eytan Adar,
+both of the University of Michigan.  The cover design is
+by Terri Geitgey of the University of Michigan Library.
 \vspace{0.2in}
 
 } % end small
@@ -235,23 +237,6 @@ used to teach his Python course that semester.
 It is a well-written Computer Science text with a focus on 
 short, direct explanations and ease of learning.  
 
-\index{Creative Commons License}
-\index{CC-BY-SA}
-\index{BY-SA}
-
-As the copyright holder of \emph{Think Python},
-Allen has given me permission to change the book's license 
-from the
-GNU Free Documentation License 
-to the more recent
-Creative Commons Attribution --- Share Alike
-license.
-This follows a general shift in open documentation licenses moving 
-from the GFDL to the CC-BY-SA (i.e. Wikipedia).
-Using the CC-BY-SA license maintains the book's 
-strong copyleft tradition while making it even more straightforward 
-for new authors to reuse this material as they see fit.
-
 The overall book structure
 has been changed to get to doing data analysis problems as quickly as
 possible and have a series of running examples and exercises 
@@ -268,7 +253,7 @@ they are needed to handle program complexity rather introduced
 as an early lesson in abstraction.  The word ``recursion'' does not 
 appear in the book at all.
 
-In chapters 10-14, nearly all of the material is brand new, focusing
+In chapters 11-14, nearly all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
 including automating tasks on your computer, retrieving data across 
 the network, scraping web pages for data, 
@@ -290,6 +275,22 @@ that are covered in \emph{Think Python}.
 And given that the books have a similar writing style and at times
 have identical text and examples, you should be 
 able to move quickly through \emph{Think Python} with a minimum of effort.
+
+\index{Creative Commons License}
+\index{CC-BY-SA}
+\index{BY-SA}
+As the copyright holder of \emph{Think Python},
+Allen has given me permission to change the book's license 
+from the
+GNU Free Documentation License 
+to the more recent
+Creative Commons Attribution --- Share Alike
+license.
+This follows a general shift in open documentation licenses moving 
+from the GFDL to the CC-BY-SA (i.e. Wikipedia).
+Using the CC-BY-SA license maintains the book's 
+strong copyleft tradition while making it even more straightforward 
+for new authors to reuse this material as they see fit.
 
 I feel that this book serves an example of why open 
 materials are so important to the future of education,
