Update the version ot 0.0.4 to celebrate the printing of the Fall 2010 edition for SI502.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@70017 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -25,7 +25,7 @@
 \usepackage{upquote}
 
 \newcommand{\thetitle}{Python for Informatics: Exploring Information}
-\newcommand{\theversion}{0.0.3}
+\newcommand{\theversion}{0.0.4}
 
 \makeindex
 
@@ -12197,7 +12197,7 @@ sense to add a {\tt UNIQUE} constraint to a logical key.  Since the
 logical key is how we look up a row from the outside world, it makes
 little sense to allow multiple rows with the same value in the table.
 
-\item A {\bf primary key} is usually a number that is often assigned
+\item A {\bf primary key} is usually a number that is assigned
 automatically by the database.  It generally has no meaning outside
 the program and is only used to link rows from different tables
 together.  When we want to look up a row in a table, usually 
